# SYCL-Translation

./: README.md
codeexamples/SYCLBufferExampleExecutingCUDAKernels/: .gitignore  CMakeLists.txt  README.md
codeexamples/SYCLBufferExampleExecutingCUDAKernels/StaticLibraryMakeCUDAKernel/: CMakeLists.txt  Makefile
codeexamples/SYCLBufferExampleExecutingCUDAKernels/StaticLibraryMakeCUDAKernel/src/: cudakernels.cu  library.cu  staticlibfnscudakernel.h
codeexamples/SYCLBufferExampleExecutingCUDAKernels/StaticLibraryUse/: CMakeLists.txt
codeexamples/SYCLBufferExampleExecutingCUDAKernels/StaticLibraryUse/src/: main.cpp
codeexamples/SYCLUsingCUDAStaticLibraryOfKernels/: .gitignore  CMakeLists.txt  README.md
codeexamples/SYCLUsingCUDAStaticLibraryOfKernels/StaticLibraryBuildCUDAKernels/: CMakeLists.txt  Makefile
codeexamples/SYCLUsingCUDAStaticLibraryOfKernels/StaticLibraryBuildCUDAKernels/src/: CudaMath.h  cudakernels.cu  library.cu  staticlibfnscudakernelsDXTC.h
codeexamples/SYCLUsingCUDAStaticLibraryOfKernels/StaticLibrarySYCLUsesCUDAKernels/: CMakeLists.txt
codeexamples/SYCLUsingCUDAStaticLibraryOfKernels/StaticLibrarySYCLUsesCUDAKernels/src/: dxtc.cpp  permutations.h
